--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
@@ -36,23 +36,23 @@ body:
     validations:
       required: true
 
-  - type: checkboxes
-    id: upgrade
-    attributes:
-      label: Upgrading?
-      description: Did you encounter the issue when upgrading from a previous version of the module, terraform or kubernetes?
-      options:
-        - label: Upgrade?
-          required: true
+  # - type: checkboxes
+  #   id: upgrade
+  #   attributes:
+  #     label: Upgrading?
+  #     description: Did you encounter the issue when upgrading from a previous version of the module, terraform or kubernetes?
+  #     options:
+  #       - label: Upgrade?
+  #         required: true
 
-  - type: checkboxes
-    id: encountered-before
-    attributes:
-      label: Seen the issue elsewhere?
-      description: Have you encountered the issue before?
-      options:
-        - label: Elsewhere?
-          required: true
+  # - type: checkboxes
+  #   id: encountered-before
+  #   attributes:
+  #     label: Seen the issue elsewhere?
+  #     description: Have you encountered the issue before?
+  #     options:
+  #       - label: Elsewhere?
+  #         required: true
 
   - type: textarea
     id: what-happened
