--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
@@ -60,9 +60,26 @@ body:
       label: Explain the Issue
       description: What happened and what did you expect to happen?
       placeholder: Tell us what you saw!
-      value: "A bug happened!"
     validations:
       required: true
+
+  - type: textarea
+    id: logs
+    attributes:
+      label: Log Data
+      description: Please provide any relevant log data.
+      placeholder: Redact any secret data from the log before posting.
+    validations:
+      required: true
+
+  - type: textarea
+    id: suggested-fix
+    attributes:
+      label: Suggested Fix
+      description: Let us know if you have a workaround or know how this can be resolved
+      placeholder: Know a solution?
+    validations:
+      required: false
 
   - type: input
     id: contact
