--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -12,19 +12,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       - name: Check documentation
+        shell: bash
         run: |
+          set -euo pipefail
           docker run --rm --volume "$(pwd):/helm-docs" -u "$(id -u)" jnorwood/helm-docs:latest
           if ! git diff --exit-code
           then
             echo "Documentation not up to date. Please run helm-docs and commit changes!" >&2
             exit 1
           fi
-
+      - name: Run Artifact Hub lint
+        shell: bash
+        run: |
+          set -euo pipefail
+          curl -Lo ah_linux_amd64.tar.gz https://github.com/artifacthub/hub/releases/download/v1.6.0/ah_1.6.0_linux_amd64.tar.gz
+          tar -xzvf ah_linux_amd64.tar.gz ah
+          ./ah lint --kind helm || exit 1
+          rm -f ./ah ./ah_linux_amd64.tar.gz
       - name: Set up Helm
         uses: azure/setup-helm@v1
         with:
@@ -36,16 +45,17 @@ jobs:
           python-version: 3.7
 
       - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2.1.0
+        uses: helm/chart-testing-action@v2.2.0
 
       - name: Run chart-testing (list-changed)
         id: list-changed
+        shell: bash
         run: |
+          set -euo pipefail
           changed=$(ct list-changed --config ct.yaml)
           if [[ -n "$changed" ]]; then
             echo "::set-output name=changed::true"
           fi
-
       - name: Run chart-testing (lint)
         run: ct lint --config ct.yaml
 
