--- a/ct.yaml
+++ b/ct.yaml
@@ -2,3 +2,4 @@ chart-repos:
   - stable=https://charts.helm.sh/stable/
   - bitnami=https://charts.bitnami.com/bitnami/
 helm-extra-args: --timeout 600s
+target-branch: main
